--- a/ex3.html
+++ b/ex3.html
@@ -8,7 +8,7 @@
 <script>
     function minArray(arr){
         let min = arr[0];
-        for(var i = 1; i < arr.length; i++){
+        for(let i = 1; i < arr.length; i++){
             if(arr[i]<min){
                 min= arr[i];
             }
